fixed the navbar top gap

--- a/subpage_solar.css
+++ b/subpage_solar.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 .page_Content {
-	margin-top: 75px;	/*background-image: url(url), -webkit-linear-gradient(270deg,rgba(227,76,37,1.00) 0%,rgba(196,138,46,1.00) 100%);
+    /*background-image: url(url), -webkit-linear-gradient(270deg,rgba(227,76,37,1.00) 0%,rgba(196,138,46,1.00) 100%);
 	background-image: url(url), -moz-linear-gradient(270deg,rgba(227,76,37,1.00) 0%,rgba(196,138,46,1.00) 100%);
 	background-image: url(url), -o-linear-gradient(270deg,rgba(227,76,37,1.00) 0%,rgba(196,138,46,1.00) 100%);
 	background-image: url(url), linear-gradient(180deg,rgba(227,76,37,1.00) 0%,rgba(196,138,46,1.00) 100.00%);*/
